// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders bold 1`] = `
<Text
  baseline={false}
  bold={true}
  inline={true}
  large={false}
  small={false}
>
  <ButtonOrLink
    className="link_vk1gl8"
    href="#"
  >
    Bold
  </ButtonOrLink>
</Text>
`;

exports[`<Link /> renders disabled 1`] = `
<Text
  baseline={false}
  bold={false}
  inline={true}
  large={false}
  small={false}
>
  <ButtonOrLink
    className="link_vk1gl8-o_O-link_disabled_q28bcx"
    disabled={true}
    href="#"
  >
    Disabled
  </ButtonOrLink>
</Text>
`;

exports[`<Link /> renders inverted 1`] = `
<Text
  baseline={false}
  bold={false}
  inline={true}
  large={false}
  small={false}
>
  <ButtonOrLink
    className="link_vk1gl8-o_O-link_inverted_1hj4kjb"
    href="#"
  >
    Inverted
  </ButtonOrLink>
</Text>
`;

exports[`<Link /> renders large 1`] = `
<Text
  baseline={false}
  bold={false}
  inline={true}
  large={true}
  small={false}
>
  <ButtonOrLink
    className="link_vk1gl8"
    href="#"
  >
    Large
  </ButtonOrLink>
</Text>
`;

exports[`<Link /> renders muted 1`] = `
<Text
  baseline={false}
  bold={false}
  inline={true}
  large={false}
  small={false}
>
  <ButtonOrLink
    className="link_vk1gl8-o_O-link_muted_74pra7"
    href="#"
  >
    Muted
  </ButtonOrLink>
</Text>
`;

exports[`<Link /> renders small 1`] = `
<Text
  baseline={false}
  bold={false}
  inline={true}
  large={false}
  small={true}
>
  <ButtonOrLink
    className="link_vk1gl8"
    href="#"
  >
    Small
  </ButtonOrLink>
</Text>
`;
